changed file name and remove unnecessary columns in excel file

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,8 @@
 <div>
 <% if(isReady) {%>
 <a href="/download/<%=path%>">Download</a>
+<br>
+<a href="/">Convert Another File</a>
 <% } %>
 </div>
 
