Made separate functions for converting, modified some styling

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
     <br>
 
     <input type="submit" class="btn btn-primary" name="button" value="Convert To Excel File">
-    <input type="submit" class="btn btn-primary" name="button" value="Convert To PDF File"">
+    <input type="submit" class="btn btn-primary" name="button" value="Convert To PDF File">
   </form>
 </div>
 <br>
